<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NightRide</string>
    <string name="location">Location</string>
    <string name="user_login">User Login</string>
    <string name="action_settings">Settings</string>
    <string name="request_ride">REQUEST A RIDE</string>
    <string name="about">About NightRide</string>
    <string name="call">Call NightRide</string>
    <string name="van_descrip">NightRide Van</string>
    <string name="night_ride_about">NightRide is a free nighttime shuttle service provided
        to the UC campus community.  It exists to provide safe and reliable transportation
        to and from locations within a one mile radius around the UC campus.  Similar to a
        cab company, students, faculty and staff can call NightRide to pick them up and take
        them to and from places on and off campus.</string>
    <string name="night_ride_hours">Sunday - Wednesday: 8 p.m. to Midnight \n
        Thursday - Saturday: 8 p.m. to 2 a.m.</string>
    <string name="confirm_gps">GPS must be enabled\n to request a ride.\n Would you like to enable now?</string>
    <string name="yes_button">Yes</string>
    <string name="no_button">No</string>
    <string name="title_activity_about">About NightRide</string>
    <string name="title_activity_confirm_ride">ConfirmRide</string>
    <string name="hello_world">Hello world!</string>

</resources>
