<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.nightride.app.MainActivity">
    <item
        android:id="@+id/call_night_ride"
        android:title="@string/call"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/about_night_ride"
        android:title="@string/about"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/user_login"
        android:title="@string/user_login"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />


</menu>
