<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/about_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="5" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1.1"
        android:id="@+id/imageView"
        android:layout_gravity="center_horizontal|top"
        android:src="@drawable/night_ride_van"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/van_descrip" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:text="@string/night_ride_about"
        android:id="@+id/textView"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:maxLines = "10"
        android:scrollbars = "vertical"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight=".7"
        android:text="@string/night_ride_hours"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:textSize="16sp"
        android:textColor="#ff0012" />
</LinearLayout>
